[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Icons/sword.PNG" type="Texture" id=1]
[ext_resource path="res://Scripts/leftSelect.gd" type="Script" id=2]
[ext_resource path="res://Scripts/rightSelect.gd" type="Script" id=3]
[ext_resource path="res://TransparentStyleBox.tres" type="StyleBox" id=4]
[ext_resource path="res://Assets/Icons/maleSymbol.png" type="Texture" id=5]
[ext_resource path="res://Scripts/leftSelectGender.gd" type="Script" id=6]
[ext_resource path="res://Scripts/rightSelectGender.gd" type="Script" id=7]
[ext_resource path="res://Assets/Icons/check.png" type="Texture" id=8]
[ext_resource path="res://Scripts/finishButton.gd" type="Script" id=9]
[ext_resource path="res://Scenes/CreateCharacter.gd" type="Script" id=10]

[node name="createCharacter" type="Node2D"]
script = ExtResource( 10 )

[node name="Gender" type="Label" parent="."]
margin_top = 49.0
margin_right = 89.0
margin_bottom = 60.0
text = "Gender"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="genderSprite" type="Sprite" parent="Gender"]
position = Vector2( 44, 28 )
scale = Vector2( 0.0478516, 0.0478516 )
texture = ExtResource( 5 )

[node name="rightSelectGender" type="Button" parent="Gender"]
margin_left = 70.0
margin_top = 20.0
margin_right = 89.0
margin_bottom = 38.0
focus_mode = 0
enabled_focus_mode = 0
text = ">"
flat = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftSelectGender" type="Button" parent="Gender"]
margin_top = 20.0
margin_right = 19.0
margin_bottom = 38.0
focus_mode = 0
enabled_focus_mode = 0
text = "<"
flat = true
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="genderName" type="Label" parent="Gender"]
visible = false
margin_right = 40.0
margin_bottom = 11.0
text = "Male"

[node name="Class" type="Label" parent="."]
margin_left = 28.0
margin_top = 97.0
margin_right = 61.0
margin_bottom = 108.0
text = "Class"
align = 1
valign = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="rightSelect" type="Button" parent="Class"]
margin_left = 42.0
margin_top = 22.0
margin_right = 61.0
margin_bottom = 39.0
focus_mode = 0
enabled_focus_mode = 0
text = ">"
flat = true
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="leftSelect" type="Button" parent="Class"]
margin_left = -28.0
margin_top = 22.0
margin_right = -9.0
margin_bottom = 39.0
focus_mode = 0
action_mode = 0
enabled_focus_mode = 0
text = "<"
flat = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weaponSprite" type="Sprite" parent="Class"]
position = Vector2( 18, 30 )
texture = ExtResource( 1 )

[node name="className" type="Label" parent="Class"]
margin_left = -9.0
margin_top = 48.0
margin_right = 44.0
margin_bottom = 61.0
text = "Warrior"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_right = 89.0
margin_bottom = 30.0
text = "Name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enteredName" type="LineEdit" parent="Name"]
light_mask = 897968
margin_left = -4.0
margin_top = 25.0
margin_right = 94.0
margin_bottom = 46.0
custom_styles/read_only = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
align = 1
max_length = 13
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
placeholder_text = "Bob"
placeholder_alpha = 0.9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="finishButton" type="Button" parent="."]
modulate = Color( 0, 0.254902, 0.0156863, 1 )
self_modulate = Color( 0, 0.254902, 0.0156863, 1 )
show_behind_parent = true
margin_left = 77.0
margin_right = 90.0
margin_bottom = 11.0
custom_styles/hover = ExtResource( 4 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/focus = ExtResource( 4 )
custom_styles/disabled = ExtResource( 4 )
custom_styles/normal = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0.254902, 0.0156863, 1 )
custom_colors/font_color = Color( 0, 0.254902, 0.0156863, 1 )
custom_colors/font_color_hover = Color( 0, 0.254902, 0.0156863, 1 )
custom_colors/font_color_pressed = Color( 0, 0.254902, 0.0156863, 1 )
icon = ExtResource( 8 )
flat = true
clip_text = true
expand_icon = true
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tree_exiting" from="." to="." method="_on_createCharacter_tree_exiting"]
[connection signal="pressed" from="Gender/rightSelectGender" to="Gender/rightSelectGender" method="_on_rightSelectGender_pressed"]
[connection signal="pressed" from="Gender/leftSelectGender" to="Gender/leftSelectGender" method="_on_leftSelectGender_pressed"]
[connection signal="pressed" from="Class/rightSelect" to="Class/rightSelect" method="_on_rightSelect_pressed"]
[connection signal="pressed" from="Class/leftSelect" to="Class/leftSelect" method="_on_leftSelect_pressed"]
[connection signal="pressed" from="finishButton" to="finishButton" method="_on_finishButton_pressed"]
